# SYCLMultithreading

./: .gitmodules  AcceleratorSelector.cxx  AcceleratorSelector.h  CMakeLists.txt  README.md  sycl_multithreading.cxx
cmake/: FindSYCL.cmake  FindTBB.cmake
